# tower-protocol

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: crc.rs  fota.rs  lib.rs  mgmt.rs  msg.rs  radio.rs
tests/: golden.rs  radio_golden.rs  roundtrip.rs
tools/: check_wire_bump.py
