[package]
name = "tower-protocol"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Shared wire protocol for the HARDWARIO TOWER link: COBS framing + CRC + postcard console message schema, the FOTA `FotaReq`/`FotaData` raw messages, and the signed FOTA `Manifest` (Ed25519 verify behind the `verify` feature). no_std; used by both the `tower` firmware and the `tower-cli` host so the two cannot drift."
repository = "https://github.com/hardwario/tower-protocol"
readme = "README.md"
keywords = ["hardwario", "tower", "embedded", "no-std", "protocol"]
categories = ["embedded", "no-std", "encoding"]

[dependencies]
# Schema is postcard (not self-describing) — both ends MUST share these exact
# struct definitions, which is the whole reason this crate exists.
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }
# COBS frame sync (0x00 delimiter). Used directly, not via postcard's accumulator,
# because our inner frame carries a trailing CRC after the postcard payload.
cobs = { version = "0.3", default-features = false }
# Bounded collections for the candidate/field lists; `serde` feature for (de)ser.
heapless = { version = "0.9", default-features = false, features = ["serde"] }
# Embedded Ed25519 (Cortex-M-friendly; the same crate embassy-boot uses for its
# ed25519-salty verify). Only pulled in by the `verify` feature, so pure-wire consumers
# (e.g. the host CLI's parsing) don't take a crypto dependency. The firmware enables it
# to verify a signed FOTA `Manifest` before arming a swap (docs/fota.md).
salty = { version = "0.3", optional = true }

[features]
# Device-side FOTA signature verification: `fota::verify_signed`. Pulls `salty`.
verify = ["dep:salty"]
