[package]
name = "tower-protocol"
version = "1.2.0"
edition = "2024"
license = "MIT"
description = "Shared wire protocol for the HARDWARIO TOWER link: COBS framing + CRC + postcard console message schema. no_std; used by both the `tower` firmware and the `tower-cli` host so the two cannot drift."
repository = "https://github.com/hardwario/tower-protocol"
readme = "README.md"
keywords = ["hardwario", "tower", "embedded", "no-std", "protocol"]
categories = ["embedded", "no-std", "encoding"]

[dependencies]
# Schema is postcard (not self-describing) — both ends MUST share these exact
# struct definitions, which is the whole reason this crate exists.
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }
# COBS frame sync (0x00 delimiter). Used directly, not via postcard's accumulator,
# because our inner frame carries a trailing CRC after the postcard payload.
cobs = { version = "0.3", default-features = false }
# Bounded collections for the candidate/field lists; `serde` feature for (de)ser.
heapless = { version = "0.9", default-features = false, features = ["serde"] }
